[package]
name = "amethyst_test"
version = "0.15.3"
authors = [
    "Azriel Hoh <azriel91@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Amethyst test utilities crate"
keywords = ["test", "amethyst"]
categories = ["game-engines"]

documentation = "https://docs.amethyst.rs/stable/amethyst_test/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"
license = "MIT/Apache-2.0"

[dependencies]
amethyst = { path = "..", version = "0.15.3", default-features = false }
derivative = "2.1.1"
derive-new = "0.5"
derive_deref = "1.1.0"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }
serde = "1"

[features]
default = ["animation", "audio", "locale", "network", "renderer"]

tiles = ["amethyst/tiles"]
animation = ["amethyst/animation"]
audio = ["amethyst/audio"]
gltf = ["amethyst/gltf"]
locale = ["amethyst/locale"]
network = ["amethyst/network"]
renderer = ["amethyst/renderer"]
profiler = ["amethyst/profiler"]
sdl_controller = ["amethyst/sdl_controller"]
json = ["amethyst/json"]
server = ["amethyst/server"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]
shader-compiler = ["amethyst/shader-compiler"]
test-support = ["amethyst/test-support"]
experimental-spirv-reflection = ["amethyst/experimental-spirv-reflection"]

# Used to tag tests that need an audio backend to run.
test_audio = []
