[package]
name = "amethyst_tiles"
version = "0.15.3"
authors = [
    "Walter Pearce <jaynus@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "2D and 3D Tile Support Library"

documentation = "https://docs.amethyst.rs/master/amethyst_tiles/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[badges]
appveyor = { repository = "amethyst/amethyst" }
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_rendy = { path = "../amethyst_rendy", version = "0.15.3" }
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_window = { path = "../amethyst_window", version = "0.15.3" }
log = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thread_profiler = { version = "0.3", optional = true }
fnv = "1"
derivative = "2.1.1"
hibitset = { version = "0.6.2", features = ["parallel"] }
smallvec = "1.2.0"
lazy_static = "1.4"
rayon = "1.5"
bitintr = "0.3"
glsl-layout = "0.4"
err-derive = "0.3"

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }
criterion = "0.3"
more-asserts = "0.2"
approx = "0.4"

[features]
profiler = ["thread_profiler/thread_profiler"]
