[package]
name = "amethyst_ui"
version = "0.10.1"
authors = ["Jacob Kiesel <kieseljake@gmail.com>", "Joël Lupien <jojolepro@jojolepro.com>", "Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"
description = "Amethyst UI crate"
keywords = ["ui", "specs", "ecs", "amethyst"]
categories = ["game-engines"]

documentation = "https://docs.amethyst.rs/stable/amethyst_ui/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"
license = "MIT/Apache-2.0"

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.11.0" }
amethyst_audio = { path = "../amethyst_audio", version = "0.10.0" }
amethyst_core = { path = "../amethyst_core", version = "0.10.0" }
amethyst_derive = { path = "../amethyst_derive", version = "0.8.0" }
amethyst_error = { path = "../amethyst_error", version = "0.5.0" }
amethyst_input = { path = "../amethyst_input", version = "0.11.0" }
amethyst_rendy = { path = "../amethyst_rendy", version = "0.5.0" }
amethyst_window = { path = "../amethyst_window", version = "0.5.0" }
clipboard = "0.5"
derivative = "2.1.1"
derive-new = "0.5.6"
fnv = "1"
glsl-layout = "0.3"
ron = "0.5"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.2"
unicode-normalization = "0.1"
unicode-segmentation = "1.6"
winit = { version = "0.19", features = ["serde"] }
log = "0.4.6"
font-kit = "0.5"
paste = "0.1"
rand = "0.7"
lazy_static = "1.4"
failure = "0.1"
glyph_brush = "0.6.0"
thread_profiler = { version = "0.3", optional = true }

[features]
vulkan = ["amethyst_rendy/vulkan", "amethyst_rendy/vulkan-x11"]
metal = ["amethyst_rendy/metal"]
empty = ["amethyst_rendy/empty"]

profiler = [ "thread_profiler/thread_profiler" ]
