[package]
name = "amethyst_ui"
version = "0.15.3"
authors = [
    "Jacob Kiesel <kieseljake@gmail.com>",
    "Joël Lupien <jojolepro@jojolepro.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Amethyst UI crate"
keywords = ["ui", "specs", "ecs", "amethyst"]
categories = ["game-engines"]

documentation = "https://docs.amethyst.rs/stable/amethyst_ui/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"
license = "MIT/Apache-2.0"

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_audio = { path = "../amethyst_audio", version = "0.15.3" }
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_derive = { path = "../amethyst_derive", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_input = { path = "../amethyst_input", version = "0.15.3" }
amethyst_rendy = { path = "../amethyst_rendy", version = "0.15.3" }
amethyst_window = { path = "../amethyst_window", version = "0.15.3" }
copypasta = "0.7.1"
derivative = "2.1.1"
derive-new = "0.5"
fnv = "1"
glsl-layout = "0.4"
ron = "0.6.4"
serde = { version = "1", features = ["derive"] }
smallvec = "1.2"
unicode-normalization = "0.1"
unicode-segmentation = "1.6"
winit = { version = "0.24", git = "https://github.com/rust-windowing/winit", rev = "38fccebe1fbc4226c75d6180e5317bd93c024951", features = ["serde"] }
log = "0.4"
font-kit = "0.10.0"
paste = "1"
rand = "0.8"
lazy_static = "1.4"
glyph_brush = "0.6"
thread_profiler = { version = "0.3", optional = true }
type-uuid = "0.1"
legion-prefab = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "7c30249f106e6177549e223ca2823eec8ab6c70b" }

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }

[features]
profiler = ["thread_profiler/thread_profiler"]
