[package]
name = "amethyst_utils"
version = "0.7.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>", "Joël Lupien <jojolepromain@gmail.com>"]
edition = "2018"
description = "Amethyst utils"

documentation = "https://docs-src.amethyst.rs/stable/amethyst_utils/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.8.0" }
amethyst_controls = { path = "../amethyst_controls", version = "0.6.0" }
amethyst_core = { path = "../amethyst_core", version = "0.7.0" }
amethyst_error = { path = "../amethyst_error", version = "0.2.0" }
amethyst_derive = { path = "../amethyst_derive", version = "0.5.0" }
amethyst_rendy = { path = "../amethyst_rendy", version = "0.2.0" }
amethyst_window = { path = "../amethyst_window", version = "0.2.0" }
derive-new = "0.5.8"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
specs-derive = "0.4.0"
specs-hierarchy = "0.5.1"

thread_profiler = { version = "0.3", optional = true }

[features]
profiler = [ "thread_profiler/thread_profiler" ]
nightly = [ "amethyst_core/nightly" ]
