[package]
name = "amethyst_utils"
version = "0.15.3"
authors = [
    "Simon Rönnberg <seamonr@gmail.com>",
    "Joël Lupien <jojolepro@jojolepro.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Amethyst utils"

documentation = "https://docs.amethyst.rs/stable/amethyst_utils/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_rendy = { path = "../amethyst_rendy", version = "0.15.3" }
amethyst_window = { path = "../amethyst_window", version = "0.15.3" }
derive-new = "0.5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
dunce = "1"
thread_profiler = { version = "0.3", optional = true }
derivative = "2.1.3"

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }

[features]
profiler = ["thread_profiler/thread_profiler"]
