[package]
name = "amethyst_window"
version = "0.3.0"
authors = ["Frizi <frizi09@gmail.com>"]
edition = "2018"
description = "Windowing support for Amethyst engine."
documentation = "https://www.amethyst.rs/doc/latest/doc/amethyst_window/"
homepage = "https://www.amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.8.0" }
amethyst_config = { path = "../amethyst_config", version = "0.12.0" }
amethyst_error = { path = "../amethyst_error/", version = "0.3.0" }

log = "0.4.6"
serde = { version = "1", features = ["derive"] }
thread_profiler = { version = "0.3", optional = true }
winit = { version = "0.19", features = ["serde", "icon_loading"] }

[features]
profiler = [ "thread_profiler/thread_profiler" ]
nightly = []
test-support =  []
