[package]
name = "amethyst_assets"
version = "0.1.0"
authors = ["torkleyy <torkleyy@gmail.com>"]
readme = "README.md"
description = """
Asynchronous asset management for games.
"""

[dependencies]
fnv = "1"
futures = "0.1.14"
mopa = "0.2.2"
parking_lot = "0.4.4"
rayon = "0.7"
specs = { version = "0.9.2", features = ["common"] }
